--- a/gui/src/settings/optionswindow.ui
+++ b/gui/src/settings/optionswindow.ui
@@ -141,6 +141,11 @@
       </item>
       <item>
        <property name="text">
+        <string>Blacklist</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>Monitoring</string>
        </property>
       </item>
@@ -216,143 +221,6 @@
           </item>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Blacklist</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="1">
-         <widget class="QLineEdit" name="lineBlacklist"/>
-        </item>
-        <item row="4" column="0" colspan="2">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>&lt;i&gt;Separate tags with spaces.&lt;/i&gt;</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0" colspan="2">
-         <widget class="QCheckBox" name="checkHideBlacklisted">
-          <property name="text">
-           <string>Ignore images containing a blacklisted tag</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="0" colspan="2">
-         <widget class="QLabel" name="label_6">
-          <property name="text">
-           <string>&lt;i&gt;Images containing a blacklisted tag will not be displayed in the results if this box is checked. Else, a confirmation will be asked before showing one of these images.&lt;/i&gt;</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="7" column="0">
-         <widget class="QLabel" name="label_48">
-          <property name="text">
-           <string>Whitelist</string>
-          </property>
-         </widget>
-        </item>
-        <item row="7" column="1">
-         <widget class="QLineEdit" name="lineWhitelist"/>
-        </item>
-        <item row="8" column="0">
-         <widget class="QLabel" name="label_50">
-          <property name="text">
-           <string>Download</string>
-          </property>
-         </widget>
-        </item>
-        <item row="8" column="1">
-         <widget class="QComboBox" name="comboWhitelist">
-          <property name="currentIndex">
-           <number>0</number>
-          </property>
-          <item>
-           <property name="text">
-            <string>Don't download automatically</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>When loading image</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>When loading thumbnail</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="9" column="0" colspan="2">
-         <widget class="QLabel" name="label_51">
-          <property name="text">
-           <string>&lt;i&gt;Images containing a whitelisted tag will be downloaded automatically according to the option above.&lt;/i&gt;</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="10" column="0">
-         <widget class="QLabel" name="label_49">
-          <property name="text">
-           <string>Ignored tags</string>
-          </property>
-         </widget>
-        </item>
-        <item row="10" column="1">
-         <widget class="QLineEdit" name="lineIgnored"/>
-        </item>
-        <item row="11" column="0" colspan="2">
-         <widget class="QLabel" name="label_52">
-          <property name="text">
-           <string>&lt;i&gt;These tags will not be taken in account when saving image.&lt;/i&gt;</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="12" column="0" colspan="2">
-         <widget class="QCheckBox" name="checkDownloadBlacklisted">
-          <property name="text">
-           <string>Download images containing blacklisted tags</string>
-          </property>
-         </widget>
-        </item>
-        <item row="13" column="0">
-         <widget class="QLabel" name="label_64">
-          <property name="text">
-           <string>Adds</string>
-          </property>
-         </widget>
-        </item>
-        <item row="13" column="1">
-         <widget class="QLineEdit" name="lineAdd"/>
-        </item>
-        <item row="14" column="0" colspan="2">
-         <widget class="QLabel" name="label_65">
-          <property name="text">
-           <string>&lt;i&gt;These tags will be automatically added to every search.&lt;/i&gt;</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="15" column="0" colspan="2">
-         <widget class="QCheckBox" name="checkConfirmClose">
-          <property name="text">
-           <string>Ask for confirmation before closing the window</string>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="labelCheckForUpdates">
           <property name="text">
@@ -392,13 +260,112 @@
           </item>
          </widget>
         </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_48">
+          <property name="text">
+           <string>Whitelist</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QLineEdit" name="lineWhitelist"/>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_50">
+          <property name="text">
+           <string>Download</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QComboBox" name="comboWhitelist">
+          <property name="currentIndex">
+           <number>0</number>
+          </property>
+          <item>
+           <property name="text">
+            <string>Don't download automatically</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>When loading image</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>When loading thumbnail</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="2">
+         <widget class="QLabel" name="label_51">
+          <property name="text">
+           <string>&lt;i&gt;Images containing a whitelisted tag will be downloaded automatically according to the option above.&lt;/i&gt;</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QLabel" name="label_49">
+          <property name="text">
+           <string>Ignored tags</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QLineEdit" name="lineIgnored"/>
+        </item>
+        <item row="7" column="0" colspan="2">
+         <widget class="QLabel" name="label_52">
+          <property name="text">
+           <string>&lt;i&gt;These tags will not be taken in account when saving image.&lt;/i&gt;</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0" colspan="2">
+         <widget class="QCheckBox" name="checkDownloadBlacklisted">
+          <property name="text">
+           <string>Download images containing blacklisted tags</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="0">
+         <widget class="QLabel" name="label_64">
+          <property name="text">
+           <string>Adds</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="1">
+         <widget class="QLineEdit" name="lineAdd"/>
+        </item>
+        <item row="10" column="0" colspan="2">
+         <widget class="QLabel" name="label_65">
+          <property name="text">
+           <string>&lt;i&gt;These tags will be automatically added to every search.&lt;/i&gt;</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="0" colspan="2">
+         <widget class="QCheckBox" name="checkConfirmClose">
+          <property name="text">
+           <string>Ask for confirmation before closing the window</string>
+          </property>
+         </widget>
+        </item>
        </layout>
        <zorder>label</zorder>
        <zorder>comboLanguages</zorder>
-       <zorder>label_5</zorder>
-       <zorder>lineBlacklist</zorder>
-       <zorder>checkHideBlacklisted</zorder>
-       <zorder>label_6</zorder>
        <zorder>label_48</zorder>
        <zorder>label_50</zorder>
        <zorder>lineWhitelist</zorder>
@@ -410,7 +377,6 @@
        <zorder>checkDownloadBlacklisted</zorder>
        <zorder>label_63</zorder>
        <zorder>comboStart</zorder>
-       <zorder>label_2</zorder>
        <zorder>label_64</zorder>
        <zorder>label_65</zorder>
        <zorder>lineAdd</zorder>
@@ -2662,6 +2628,50 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="pageBlacklist">
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="QLabel" name="labelBlacklist">
+          <property name="text">
+           <string>Blacklisted tags</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPlainTextEdit" name="textBlacklist"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="labelBlacklistHelp">
+          <property name="text">
+           <string>&lt;i&gt;One line per blacklist. You can put multiple tags on a single line to make &quot;AND&quot; conditions.&lt;/i&gt;</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkHideBlacklisted">
+          <property name="text">
+           <string>Ignore images containing a blacklisted tag</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="labelHideBlacklisted">
+          <property name="text">
+           <string>&lt;i&gt;Images containing a blacklisted tag will not be displayed in the results if this box is checked. Else, a confirmation will be asked before showing one of these images.&lt;/i&gt;</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
       <widget class="QWidget" name="pageMonitoring">
        <layout class="QFormLayout" name="formLayout_12">
         <item row="0" column="0">
@@ -3062,8 +3072,6 @@
   <tabstop>buttonBox</tabstop>
   <tabstop>comboLanguages</tabstop>
   <tabstop>comboStart</tabstop>
-  <tabstop>lineBlacklist</tabstop>
-  <tabstop>checkHideBlacklisted</tabstop>
   <tabstop>lineWhitelist</tabstop>
   <tabstop>comboWhitelist</tabstop>
   <tabstop>lineIgnored</tabstop>
