Save 'search' when downloading single images (fix #1322)

--- a/gui/src/mainwindow.ui
+++ b/gui/src/mainwindow.ui
@@ -212,6 +212,11 @@
           </column>
           <column>
            <property name="text">
+            <string>Search</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
             <string>Site</string>
            </property>
           </column>
